Fiz alterações no Readme adicionando configurações para o projeto. Também alterei o pom